--- a/Analysis/QiuGon.Analysis/QuiGon.Analysis.csproj
+++ b/Analysis/QiuGon.Analysis/QuiGon.Analysis.csproj
@@ -30,12 +30,25 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="gren_consts">
+      <HintPath>..\..\Libraries\Solarix\gren_consts.dll</HintPath>
+    </Reference>
+    <Reference Include="gren_fx">
+      <HintPath>..\..\Libraries\Solarix\gren_fx.dll</HintPath>
+    </Reference>
     <Reference Include="IvanAkcheurov.Commons, Version=0.2.1.30, Culture=neutral, PublicKeyToken=a61413de1d13f8fc, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NTextCat.0.2.1.30\lib\net40\IvanAkcheurov.Commons.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="IvanAkcheurov.NClassify, Version=0.2.1.30, Culture=neutral, PublicKeyToken=a61413de1d13f8fc, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NTextCat.0.2.1.30\lib\net40\IvanAkcheurov.NClassify.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="lemmatizator_fx">
+      <HintPath>..\..\Libraries\Solarix\lemmatizator_fx.dll</HintPath>
+    </Reference>
+    <Reference Include="LingvoNET, Version=1.1.0.0, Culture=neutral, PublicKeyToken=7d49b21a20bef57b, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\LingvoNET.1.1.0\lib\LingvoNET.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NTextCat, Version=0.2.1.30, Culture=neutral, PublicKeyToken=a61413de1d13f8fc, processorArchitecture=MSIL">
@@ -55,8 +68,10 @@
     <Compile Include="Filters\FilterChain.cs" />
     <Compile Include="Filters\IFilter.cs" />
     <Compile Include="Filters\TextFilters\ITextFilter.cs" />
+    <Compile Include="Filters\TextFilters\LemmaFilter.cs" />
     <Compile Include="Filters\TextFilters\NumericFilter.cs" />
     <Compile Include="Filters\TextFilters\PunctuationFilter.cs" />
+    <Compile Include="Filters\TextFilters\StemingFilter.cs" />
     <Compile Include="Filters\TextFilters\StopWordsFilter.cs" />
     <Compile Include="Filters\TextFilters\TextFilterConstants.cs" />
     <Compile Include="Filters\TextFilters\TextToLowerCaseFilter.cs" />
@@ -68,6 +83,13 @@
     <Compile Include="LanguageDetection\LanguageDetector.cs" />
     <Compile Include="LanguageDetection\NTextCat\NTextCatLanguageDetector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Text\Lemmatisation\ILemmatyzerFacade.cs" />
+    <Compile Include="Text\Lemmatisation\Lemmatyzer.cs" />
+    <Compile Include="Text\Stemming\IStemerFacade.cs" />
+    <Compile Include="Text\Stemming\LingvoNet\LingovNetStemmer.cs" />
+    <Compile Include="Text\Lemmatisation\Solarix\SolarixLemmatyzer.cs" />
+    <Compile Include="Text\Stemming\YandexStemmer\YandexStemmer.cs" />
+    <Compile Include="Text\Stemming\Stemmer.cs" />
     <Compile Include="Text\StopWords\StopWordsFactory.cs" />
     <Compile Include="Helpers\WordsFromFileProvider.cs" />
     <Compile Include="Text\TextAnalysisData.cs" />
@@ -312,8 +334,17 @@
     <Content Include="LanguageDetection\NTextCat\LanguageModels\TextCat\LM\yiddish-utf.lm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Text\Lemmatisation\Solarix\lemmatizator.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Text\Stemming\YandexStemmer\mystem.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <Content Include="Text\StopWords\Storage\Russian.sw">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Text\Lemmatisation\Solarix\lemmatizer.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
