--- a/Analysis/QiuGon.Analysis/packages.config
+++ b/Analysis/QiuGon.Analysis/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LingvoNET" version="1.1.0" targetFramework="net452" />
   <package id="NTextCat" version="0.2.1.30" targetFramework="net452" />
 </packages>
