--- a/DataProviders/VkDataProvider/QiuGon.DataProviders.VkDakaProvider/QiuGon.DataProviders.VkDakaProvider.csproj
+++ b/DataProviders/VkDataProvider/QiuGon.DataProviders.VkDakaProvider/QiuGon.DataProviders.VkDakaProvider.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D5BC3ECC-E689-4132-81DD-3083E2C06783}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{B0BC19F9-9568-4D4D-A03F-EA9BDA2ABA4C}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QuiGon.Analysis.Tests</RootNamespace>
-    <AssemblyName>QuiGon.Analysis.Tests</AssemblyName>
+    <RootNamespace>QiuGon.DataProviders.VkDakaProvider</RootNamespace>
+    <AssemblyName>QiuGon.DataProviders.VkDakaProvider</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,6 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack, Version=1.4.9.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,30 +46,31 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="VkNet, Version=1.21.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\VkNet.1.21.0\lib\net40\VkNet.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Connection\ConnectionFactory.cs" />
+    <Compile Include="Connection\VkAuthorizeParameters.cs" />
+    <Compile Include="Connection\VkConnection.cs" />
+    <Compile Include="MessageStatistic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VkDataProvider.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Analysis\QiuGon.Analysis\QuiGon.Analysis.csproj">
-      <Project>{3c5cb61b-0004-4ff0-ac69-7d1c8a6ec3fa}</Project>
-      <Name>QuiGon.Analysis</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\DataProviders\Infrastructure\QuiGon.DataProviders.Infrustructure\QuiGon.DataProviders.Infrustructure.csproj">
-      <Project>{24834cd7-381d-459f-9ddb-a69c8b0a8634}</Project>
-      <Name>QuiGon.DataProviders.Infrustructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\DataProviders\VkDataProvider\QiuGon.DataProviders.VkDakaProvider\QiuGon.DataProviders.VkDakaProvider.csproj">
-      <Project>{b0bc19f9-9568-4d4d-a03f-ea9bda2aba4c}</Project>
-      <Name>QiuGon.DataProviders.VkDakaProvider</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Infrastructure\QuiGon.Infrasctructure\QuiGon.Infrastructure.csproj">
+    <ProjectReference Include="..\..\..\Infrastructure\QuiGon.Infrasctructure\QuiGon.Infrastructure.csproj">
       <Project>{0e19d097-17bc-46ba-a7e4-20aabd0f5f85}</Project>
       <Name>QuiGon.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Infrastructure\QuiGon.DataProviders.Infrustructure\QuiGon.DataProviders.Infrustructure.csproj">
+      <Project>{24834CD7-381D-459F-9DDB-A69C8B0A8634}</Project>
+      <Name>QuiGon.DataProviders.Infrustructure</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
